[package]
name = "vq"
version = "0.1.0"
authors = ["Gerrit Sijberen Luimstra <gerrit.luimstra@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_chacha = "0.3.0"
ndarray = "0.15.1"
ndarray-rand = "0.14.0"

# Required for tests
approx = "0.4.0"
